<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/star"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/modePanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#994c978a"
        android:padding="10dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed">

        <TextView
            android:id="@+id/modeSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_select"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/gameMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/game_mode"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/modeSelect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/inputMode"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <TextView
            android:id="@+id/inputMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/input_mode"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toEndOf="@id/gameMode"
            app:layout_constraintTop_toBottomOf="@id/modeSelect"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/modeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/gameMode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="#994c978a"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline1"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/inputSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_select"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/inputNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_num"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/inputSelect"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/editNum"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:hint="@string/input_num"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputNum"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="autoFill"/>

        <Button
            android:id="@+id/randomBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_btn"
            android:textColor="@android:color/black"
            app:backgroundTint="@android:color/white"
            app:cornerRadius="50dp"
            app:layout_constraintTop_toBottomOf="@id/inputSelect"
            app:layout_constraintStart_toEndOf="@id/inputNum"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/winValid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#994c978a"
        android:padding="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/barrier1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/gridSizeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bingo_row_count_label"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/editGridSize"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:inputType="number"
            android:hint="@string/input_bingo_count"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/gridSizeLabel"
            tools:ignore="autoFill"/>

        <TextView
            android:id="@+id/bingoCountLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bingo_count_label"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/editGridSize"/>

        <EditText
            android:id="@+id/editBingoCount"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:inputType="number"
            android:hint="@string/edit_bingo_count"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/bingoCountLabel"
            tools:ignore="autoFill"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/start_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/winValid"
        >

        <Button
            android:id="@+id/startGameBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_game"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:backgroundTint="@android:color/white"
            app:cornerRadius="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="modePanel,inputPanel"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/start_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="3"
            android:background="#4c978a"
            android:padding="10dp"/>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>